# comfyui-node-organizer

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  test_idempotent.mjs
.github/workflows/: ci.yaml  publish_action.yaml
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: debug.ts.html  index.html
coverage/src/layout/: bin-pack.ts.html  graph-builder.ts.html  groups.ts.html  index.html  index.ts.html  layer-assign.ts.html  layout-utils.ts.html  node-classifier.ts.html  ordering.ts.html  positioning.ts.html  types.ts.html
src/: consants.ts  debug.ts  index.ts
src/layout/: bin-pack.ts  graph-builder.ts  groups.ts  index.ts  layer-assign.ts  layout-utils.ts  node-classifier.ts  ordering.ts  positioning.ts  reroute-collapse.ts  selected-groups.ts  title-tokens.ts  types.ts
tests/: helpers.ts  invariants.ts
tests/fixtures/: complex-parallel.json  group-test-simple.json  group-test.json  nested-groups.json  nested-wrapper.json  simple-dag.json  subgraph-io.json  token-testing.json
tests/integration/: layout.test.ts  selected-groups.test.ts  token-layout.test.ts
